--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="title" content="Redirect from KM to og checker" />
-        <script src="./index.js"></script> 
+        <script src="./index.js" defer></script> 
     </head>
     <body>
         <form id="form">
