--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta name="title" content="Redirect from KM to og checker" />
         <script src="./index.js" defer></script> 
+        <link rel="stylesheet" type="text/css" href="./index.css">
     </head>
     <body>
         <form id="form">
